Implemented store methods. Frontend prototyping
